@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2016-05-11:
+- Reimplemented 'isRecording' and added 'current- and nextrecording' in displaychannel
+
 2016-05-08:
 - Fixes for epg2vdr and running timers
 
